- Add new Variable for Automated Emails: Membership Description
- Add API functions: ms_api, get_membership_id, add_subscription (see API Docs for details)
- Add a "Retry" function to Transaction logs to re-process a single transaction
- Add a "Auto Matching" screen to the billings page to link M1 payments with memberships
- Add notice when unsupported Permalink options are detected
- Update the Authorize.Net library to latest version that uses the new API URLs
- Improve Invitation code Add-on to accept an code via URL param &invitation_code=abc
- Improved the details in the Pro-Rating Add-on with short instructions
- Improve Membership Description to allow shortcodes
- Improve transaction logs with more details and small layout improvements
- Fix the user-name variables in email/shortcodes (use display name instead of login name)
- Fix the "Ignore" action in the Transaction log list
- Fix an issue where M2 returns an error to PayPal when a non-M2 payment is made in the PayPal account
- Fix protection bug that would hide custom posts in certain situations, e.g. when using wp_list_pages()
- Fix a bug in Pro-Rating Add-on to correctly apply discount from now on
- Fix wrong signup-logic to instantly disable the old subscription on membership upgrade/downgrade
- Fix a PHP error that occured when paying the first invoice of a member via manual gateway
- Fix a possible recursive redirection when showing the Autorize.Net payment form
- Fix displayed payment method for subscriptions in Member editor screen
- Fix an issue that would not actiavte imported subscriptions
- Fix issue that did not notify the blow admin of new user signups
- Fix wrong redirects/URLs on some SSL sites
- Small changes like fix some typos, add new filters and code cleanup

1.0.1.1
----------------------------------------------------------------------
- Add a new Automated Email Response: User account created (i.e. welcome email)
- Add a warning when BuddyPress pages conflict with M2 Membership pages